<resources>
    <string name="app_name">MacClock</string>

    <string name="delete_alarm">-</string>
    <string name="add_alarm">+</string>

    <string name="hours_sign">h</string>
    <string name="minutes_sign">m</string>
    <string name="seconds_sign">s</string>
    <string name="zero">00</string>

    <string name="save">Save</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="mode">Pause</string>

    <string name="text_alarm">Выключить будильник?</string>
    <string name="yes">Да</string>
</resources>